# py-pacman

./: .gitignore  appSettings.py  config.py  diff.txt  installed_pacman.txt  installed_yay.txt  main.py  pyproject.toml  requirements.txt  search_pacman.txt  search_yay.txt  yay_list.txt
classes/: Osc8.py  Package.py
modules/: customTable.py  diffInstalled.py  exportToFile.py  getAllInstalledPackages.py  getIgnoredPackagesList.py  getPackageFilePath.py  installDiff.py  installPackage.py  menuTable.py  packagesMenu.py  removePackageFromFile.py  saveInstalledPackagesToFiles.py  searchPackage.py  showPackages.py  syncDiffWithInstalled.py  uninstallPackage.py  updatePackages.py
